# dtmc_base

./: .gitignore  .gitignore_lib  404.html  README.2026-04-11.md  README.md  index.html  sitemap.xml
dtmc_base_benchmarks/: CMakeLists.txt
dtmc_base_benchmarks/include/dtmc_base_benchmarks/: benchmark_adc.h  benchmark_helpers.h  benchmark_interval.h  benchmark_netportal_duplex.h  benchmark_netportal_simplex.h
dtmc_base_benchmarks/src/: benchmark_adc.c  benchmark_helpers.c  benchmark_interval.c  benchmark_netportal_duplex.c  benchmark_netportal_simplex.c
dtmc_base_demos/: CMakeLists.txt
dtmc_base_demos/include/dtmc_base_demos/: demo_adc_print.h  demo_display_hello.h  demo_gpiopin_blink.h  demo_gpiopin_button.h  demo_gpiopin_record.h  demo_helpers.h  demo_iox.h  demo_netportal.h  demo_runtime_info.h  demo_write_kvp.h
dtmc_base_demos/src/: demo_adc_print.c  demo_display_hello.c  demo_gpiopin_blink.c  demo_gpiopin_button.c  demo_gpiopin_record.c  demo_helpers.c  demo_iox.c  demo_netportal.c  demo_runtime_info.c  demo_write_kvp.c
dtmc_base_library/: CMakeLists.txt
dtmc_base_library/include/dtmc_base/: dtadc.h  dtadc_scan.h  dtadc_scanlist.h  dtbuffer_distributor.h  dtbufferqueue.h  dtbusywork.h  dtcpu.h  dtdebouncer.h  dtdisplay.h  dtdotstar.h  dtdotstar_dummy.h  dtflowmonitor.h  dtframer.h  dtframer_simple.h  dtgpiopin.h  dtgpiopin_dummy.h  dthttpclient.h  dthttpd.h  dthttpd_callback_rpc.h  dtinterval.h  dtinterval_scheduled.h  dtiox.h  dtiox_dummy.h  dtiox_modbus.h  dtlightsensor.h  dtlightsensor_dummy.h  dtlock.h  dtmanifold.h  dtmc_base.h  dtmc_base_constants.h  dtmc_base_constants.yaml  dtmcp4728.h  dtmcp4728_dummy.h  dtmodbus_helpers.h  dtnetbridge.h  dtnetportal.h  dtnetportal_iox.h  dtnetportal_shm.h  dtnetprofile.h  dtnetprofile_distributor.h  (+16 more)
dtmc_base_library/src/: dtadc.c  dtadc_scan.c  dtadc_scanlist.c  dtbuffer_distributor.c  dtbusywork.c  dtcpu_agnostic.c  dtdebouncer.c  dtdisplay.c  dtdotstar.c  dtdotstar_dummy.c  dtflowmonitor.c  dtframer.c  dtframer_simple.c  dtgpiopin.c  dtgpiopin_dummy.c  dthttpd.c  dthttpd_callback_rpc.c  dtinterval.c  dtinterval_scheduled.c  dtiox.c  dtiox_dummy.c  dtlightsensor.c  dtlightsensor_dummy.c  dtmanifold.c  dtmcp4728.c  dtmcp4728_dummy.c  dtmodbus_helpers.c  dtnetbridge.c  dtnetportal.c  dtnetportal_iox.c  dtnetportal_shm.c  dtnetprofile.c  dtnetprofile_distributor.c  dtnvblob.c  dtpackable_object_distributor.c  dtradioconfig.c  dttasker.c  dttasker_registry.c  dttimeseries.c  dttimeseries_beat.c  (+6 more)
dtmc_base_tests/: CMakeLists.txt
dtmc_base_tests/include/: dtmc_base_tests.h
dtmc_base_tests/src/: test_dtbuffer_distributor.c  test_dtbufferqueue.c  test_dtbusywork.c  test_dtcpu.c  test_dtdebouncer.c  test_dtdotstar_dummy.c  test_dtframer_simple.c  test_dtgpiopin_dummy.c  test_dthttpclient.c  test_dthttpd.c  test_dthttpd_callback_rpc.c  test_dtinterval.c  test_dtinterval_scheduled.c  test_dtiox_dummy.c  test_dtlightsensor_dummy.c  test_dtlock.c  test_dtlock_simple.c  test_dtlock_stress.c  test_dtmanifold.c  test_dtmcp4728_dummy.c  test_dtnetportal_iox.c  test_dtnetportal_shm.c  test_dtnetprofile.c  test_dtnetprofile_distributor.c  test_dtnvblob.c  test_dtpackable_object_distributor.c  test_dtradioconfig.c  test_dtruntime.c  test_dtsemaphore.c  test_dttasker.c  test_dttasker_registry.c  test_dttimeseries.c  test_matching.c
functions/: index.html
mkdocs/: main.py  mkdocs.yml
mkdocs/docs/: index.md
mkdocs/docs/functions/: index.md
mkdocs/dtack_mkdocs_scraped/: all.md
search/: search_index.json
